[package]
name = "cdec"
version = "2.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12.1", features = ["json"] }
clap = { version = "4.5.3", features = ["derive"] }
chrono = {version = "0.4.35", features = ["serde"] }
